--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest run"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
-    "@nuxt/test-utils": "^3.19.1",
     "@pinia/nuxt": "^0.11.0",
     "eslint": "^9.28.0",
     "nuxt": "^3.17.4",
@@ -20,6 +20,7 @@
     "pinia": "^3.0.2",
     "quasar": "^2.18.1",
     "typescript": "^5.8.3",
+    "vitest": "^3.2.3",
     "vue": "^3.5.15",
     "vue-router": "^4.5.1"
   },
